styles/popup.css
@import url('https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

* {
  font-family: 'Mali', 'Open Sans', sans-serif;
}

body {
  background: #FFFCF9;
  width: max-content;
  height: max-content;
  margin: 0;
  min-width: 400px;
  min-height: 300px;

  /* Fixed max https://stackoverflow.com/a/8983678 */
  max-width: 750px;
  max-height: 600px
}

/*header*/
.header {
  color: #454545;
  text-decoration: none; /* no underline */
  background: rgb(245, 225, 124);
  background: linear-gradient(90deg, #FFE279 50%, rgba(255, 158, 44, 0.7) 119.81%);
  display: flex;
}

#caption {
  margin-left: 18px;
}

.header > *:hover {
  color: #000000;
}

#caption small {
  font-weight: 400;
  color: #666;
}

#settings {
  margin-left: auto;
  padding: 0 16px;
  opacity: 0.5;
}

#settings:hover {
  opacity: 1;
}

/*content wrapper*/
.wrapper {
  padding: 5px 8px;
}

.searchWrapper {
  position: fixed;
  /*overflow: hidden;*/
  height: 120px;
}

/*search bar and search button*/
.speech-bubble {
  transform: rotate(5.96deg);
  width: 60%;
  position: fixed;
  bottom: 75px;
  left: 110px;
  z-index: 100;
  background: white;
  padding: 0 5px;
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
  min-width: 250px;
  min-height: 30px;
  visibility: visible;
  opacity: 1;
  transition: all 300ms;

  /*chat bubble*/
  border: 3px groove #000;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
}

/*Right triangle, placed bottom left side slightly in*/
.tri-right.border.btm-left-in:before {
  content: ' ';
  position: absolute;
  width: 0;
  height: 0;
  left: 35px;
  right: auto;
  top: auto;
  bottom: -28px;
  border: 13px groove;
  border-color: #000 transparent transparent #000;
}

.tri-right.btm-left-in:after {
  content: ' ';
  position: absolute;
  width: 0;
  height: 0;
  left: 38px;
  right: auto;
  top: auto;
  bottom: -20px;
  border: 12px solid;
  border-color: #fff transparent transparent #fff;
}

.search:focus-within {
  border-color: black;
}

#searchTerm, #response {
  min-width: 200px;
  font-weight: 700;
  border: none;
  vertical-align: text-bottom;
  position: absolute;
  height: 100%;
  background: none;
  width: calc(100% - 40px);
  text-transform: uppercase;
}

#response {
  display: none
}

#searchTerm:focus, #response:focus {
  outline: none;
  /*color: #00B4CC;*/
}

.searchButton:active {
  outline: none;
  /*background: #B4CC00;*/
  border-color: #B4CC00;
  background: #00B4CC;
}

.searchButton {
  width: 30px;
  height: 30px;
  border-radius: 100px;
  text-align: center;
  color: #fff;
  border: none;
  cursor: pointer;
  font-size: 20px;
  background: inherit;
  outline: none;
  padding-left: 2px;
  float: right;
}

.searchButton[disabled] {
  opacity: 0.5;
  cursor: default;
}

/*goose*/
#gooseHelper {
  /*width: 73.5px;*/
  height: 160px;
  transform: rotate(-13deg);
  position: fixed;
  bottom: -13px;
  left: -10px;
  cursor: pointer;
  transition: all 300ms;
}

#queryWrapper {
  padding: 8px 5px;
  background: #FFB470;
  border-radius: 10px;
  color: #fff;
  display: inline-table;
}

#query {
  overflow-wrap: anywhere;
  margin: 0;
}

.resultWrapper {
  margin-bottom: 80px;
}

.resultWrapper > * {
  margin: 10px 5px;
}

/*results*/

.resultItem {
  min-height: 60px;
  background: #FFFFFF;
  border: 0.25px solid #F1F1F1;
  box-sizing: border-box;
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
  padding: 10px;
}

.resultContent {
  margin: 0;
}

/* You search for...*/
.queryDisplay {
  font-size: larger;
  overflow-wrap: break-word;
  margin-top: 5px;
}

.search-wrapper {
  width: 500px;
  margin: auto;
  margin-top: 50px;
}

.close-icon {
  border: 1px solid transparent;
  background-color: transparent;
  /*display: inline-block;*/
  vertical-align: middle;
  outline: 0;
  cursor: pointer;
  display:none
}

.close-icon:after {
  content: "X";
  display: block;
  width: 15px;
  height: 15px;
  position: absolute;
  background-color: #FA9595;
  z-index: 1;
  right: 6px;
  top: 0;
  bottom: 0;
  margin: auto;
  padding: 2px;
  border-radius: 50%;
  text-align: center;
  color: white;
  font-weight: normal;
  font-size: 12px;
  box-shadow: 0 0 2px #E50F0F;
  cursor: pointer;
}

.authorWrapper {
  position: fixed;
  bottom: 10px;
  right: 15px;
  color: #666;
  font-size: 10.5px;
}

#heart {
  color: #e25555;
  /*color: #EEAE23;*/
}

